--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>DIMUN X</title>
+  <title>DIMUN XI</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="logo.ico">
   <!-- Bootstrap core CSS -->
@@ -23,7 +23,7 @@
     
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -88,7 +88,7 @@
     <button onclick="myFunction()" id="clos">Close</button>
     <div id="warning">
         <h1>Update on the Corona Virus</h1><hr>
-        <p>Due to the recent outbreak of the Corona Virus, DIMUN X has unfortunately been postponed to a further time as of now.<br><br>
+        <p>Due to the recent outbreak of the Corona Virus, DIMUN XI has unfortunately been postponed to a further time as of now.<br><br>
         The newly fixed dates for the new conference will be on the xxth of xxx 2020.<br><br>
         For more information on the virus;<br>
         Please refer to the <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">World Health Organisation's website</a>.<br><br>
@@ -117,11 +117,11 @@
             <br>
             <p class="text-dark">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,
 
-                <br><br>DIMUN is back! The tenth annual Dulwich International Model United Nations conference (DIMUN X) will be held at Dulwich College Beijing from the <br>13th of March to 15th of March 2020.
+                <br><br>DIMUN is back! The tenth annual Dulwich International Model United Nations conference (DIMUN XI) will be held at Dulwich College Beijing from the <br>13th of March to 15th of March 2020.
 
                 <br><br>Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.
 
-                <br><br>At DIMUN X, Key Stage 3 (middle school) delegates will be debating a total of 28 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Erik Chen and Yi Xin Lee.
+                <br><br>At DIMUN XI, Key Stage 3 (middle school) delegates will be debating a total of 28 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) chairs and the DIMUNITE press team, led by Secretaries-General Erik Chen and Yi Xin Lee.
 
                 <br><br>Please do not hesitate to contact us for more information, or any questions regarding the conference at:
                 <a href="mailto://dimun@dulwich-beijing.cn">dimun@dulwich-beijing.cn.</a>
@@ -138,7 +138,7 @@
             <div class="col-lg-5 text-lg-right text-md-center theme-text" style="padding;" id="theme-text">
                 <p class="h1">A Decade of Change</p>
                 <hr>
-                A past decade of change begets an impending decade of change. As we celebrate the tenth anniversary of DIMUN in March 2020, the changes that we have witnessed throughout this bustling decade require the close attention of our global community as they would, if left unattended to, jeopardize the current prosperity and progress the world is making. DIMUN X therefore challenges you to pursue sustainable solutions to the variety of issues that you will face while working collaboratively to protect national interests but also to find areas of compromise.
+                A past decade of change begets an impending decade of change. As we celebrate the tenth anniversary of DIMUN in March 2020, the changes that we have witnessed throughout this bustling decade require the close attention of our global community as they would, if left unattended to, jeopardize the current prosperity and progress the world is making. DIMUN XI therefore challenges you to pursue sustainable solutions to the variety of issues that you will face while working collaboratively to protect national interests but also to find areas of compromise.
             </div>
         </div>
     </section>
