--- a/directors.html
+++ b/directors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Directors | DIMUN X</title>
+    <title>Directors | DIMUN XI</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
     <!-- Font Awesome -->
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -106,9 +106,9 @@
 
                     <br><br>This year, positions will be allocated on a first come first serve basis, so please hand in the required letters and payments as soon as possible before the deadlines. As we are also looking for new schools to collaborate with, we would be grateful if you could supply us with suggestions of any other schools that might be interested in attending.
 
-                    <br><br>As DIMUN X will be the first time in Beijing for many delegates, we have partnered with WildChina Education to offer tours around Beijing. For more information, click here <a href="travel.html">WildChina Tours</a>
+                    <br><br>As DIMUN XI will be the first time in Beijing for many delegates, we have partnered with WildChina Education to offer tours around Beijing. For more information, click here <a href="travel.html">WildChina Tours</a>
 
-                    <br><br>Please do not hesitate to contact us by email for further details regarding DIMUN X. </p>
+                    <br><br>Please do not hesitate to contact us by email for further details regarding DIMUN XI. </p>
             </div>
     </section>
 
