--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    <meta http-equiv="x-ua-compatible" content="ie=edge">
-	    <title>Schedule | DIMUN X</title>
+	    <title>Schedule | DIMUN XI</title>
 	    <!-- favicon -->
 	    <link rel="shortcut icon" href="logo.ico">
 	    <!-- Font Awesome -->
@@ -23,7 +23,7 @@
 	<body data-spy="scroll" data-target="#scroll-list" data-offset="250">
 		<header>
 	        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-	            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
+	            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>
 	            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 	            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	            <span class="fas fa-list text-dark"></span>
@@ -92,7 +92,7 @@
 	        <div class="text-center container-fluid first">
 	            <div class="team">
 	                <h1> Schedule </h1>
-                    <p>Schedule for DIMUN X will be updated shorty.<br>Please contact us if you have any inquiries.</p>
+                    <p>Schedule for DIMUN XI will be updated shorty.<br>Please contact us if you have any inquiries.</p>
                     <!--
 	                <p><small>Below is the Delegate's schedule for the conference.</small></p>
 	                <hr>
