--- a/spotlight.html
+++ b/spotlight.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Spotlight | DIMUN X</title>
+    <title>Spotlight | DIMUN XI</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="logo.ico">
     <!-- Font Awesome -->
@@ -23,7 +23,7 @@
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN X</strong></a>
+            <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-list text-dark"></span>
@@ -94,9 +94,9 @@
                 <h1> Spotlight  </h1>
                 <hr>
                 <p>Since DIMUN VII, the annual DIMUN Spotlight has been bringing delegates to the stage. DIMUN Spotlight is a special event for DIMUN in which delegates can show off any talent that they might have, whether it be singing, magic tricks or something wholly different. Whatever it may be, DIMUN Spotlight is a time for delegates to take a break from a day full of resolutions and debating to enjoy performances and see just exactly what hidden talents the delegates of their committees have. It is a time for the delegates to show how much more their abilities extend beyond debating and writing, beyond even MUN itself. Delegates will all be encouraged to sign up and fill the evening with exciting performances and shows. Who knows what spectacular performances will there be this year?<br>
-				<br>To sign up for DIMUN X Spotlight, register on this link <a href="https://forms.microsoft.com/Pages/ResponsePage.aspx?id=_szoC8ms60aAsVZE7XV4I3efGFFjrphAi84A1yugwdpUQ0FaNTVFNjQ5Vk4zMEU3SVJCQzNYT01MNi4u" target="_blank">here</a>.
+				<br>To sign up for DIMUN XI Spotlight, register on this link <a href="https://forms.microsoft.com/Pages/ResponsePage.aspx?id=_szoC8ms60aAsVZE7XV4I3efGFFjrphAi84A1yugwdpUQ0FaNTVFNjQ5Vk4zMEU3SVJCQzNYT01MNi4u" target="_blank">here</a>.
                 </p>
-                <p><strong>DIMUN X Spotlight Poster</strong></p>
+                <p><strong>DIMUN XI Spotlight Poster</strong></p>
                 <img src="img/DIMUNXSpotlight.png" style="width:40%;min-width: 275px;height:auto;">
                 <hr>
                 <p><strong>DIMUN IX Spotlight Poster</strong></p>
