--- a/press.html
+++ b/press.html
@@ -22,66 +22,52 @@
 </head>
 <body data-spy="scroll" data-target="#scroll-list" data-offset="300">
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">             <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">             <span class="fas fa-list text-dark"></span>         </button>         <div class="collapse navbar-collapse" id="navbarSupportedContent">             <ul class="navbar-nav mr-auto">                 <li class="nav-item dropdown">                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>                     <div class="dropdown-menu">                         <a class="dropdown-item" href="GA1.html">GA1</a>                         <a class="dropdown-item" href="GA2.html">GA2</a>                         <a class="dropdown-item" href="ENV.html">ENV</a>                         <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>                         <a class="dropdown-item" href="HRC.html">HRC</a>                         <a class="dropdown-item" href="SPC.html">SPC</a>                         <a class="dropdown-item" href="DIS.html">DIS</a>                         <a class="dropdown-item" href="SC.html">SC</a>                         <a class="dropdown-item" href="AP.html">AP</a>                     </div>                 </li>                 <li class="nav-item dropdown">                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>                     <div class="dropdown-menu">                         <a class="dropdown-item" href="directors.html">Directors</a>                         <a class="dropdown-item" href="secretariat.html">Secretariat</a>                         <a class="dropdown-item" href="so.html">Student Officers</a>                         <a class="dropdown-item" href="delegates.html">Delegates</a>                         <a class="dropdown-item" href="alumni.html">Alumni</a>                         <div class="dropdown-divider"></div>                         <a class="dropdown-item" href="sop.html">Statement of purpose</a>                     </div>                 </li>                 <li class="nav-item dropdown">                     <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>                     <div class="dropdown-menu">                         <a class="dropdown-item" href="transport.html">Transport</a>                         <a class="dropdown-item" href="accommodation.html">Accommodation</a>                         <a class="dropdown-item" href="schedule.html">Schedule</a>                     </div>                 </li>                 <li class="nav-item">                     <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>                 </li>                 <li class="nav-item">                     <a class="nav-link text-dark" href="press.html">Press</a>                 </li>                 <li class="nav-item">                     <a class="nav-link text-dark" href="munapp.html">MUNApp</a>                 </li>             </ul>             <ul class="navbar-nav">                 <li class="nav-item">                     <a class="nav-link text-dark" href="contact.html">Contact Us</a>                 </li>             </ul>         </div>     </nav>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
             <a class="navbar-brand text-dark" href="index.html"><img src=img/logo_black.png height=82 width=80><strong> DIMUN XI</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fas fa-list text-dark"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="committees.html">Overview</a>
-                        <a class="dropdown-item" href="GA1.html">GA1</a>
-                        <a class="dropdown-item" href="GA2.html">GA2</a>
-                        <a class="dropdown-item" href="ENV.html">ENV</a>
-                        <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>
-                        <a class="dropdown-item" href="HRC.html">HRC</a>
-                        <a class="dropdown-item" href="SPC.html">SPC</a>
-                        <a class="dropdown-item" href="DIS.html">DIS</a>
-                        <a class="dropdown-item" href="SC.html">SC</a>
-                        <a class="dropdown-item" href="AP.html">AP</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="directors.html">Directors</a>
-                        <a class="dropdown-item" href="secretariat.html">Secretariat</a>
-                        <a class="dropdown-item" href="so.html">Student Officers</a>
-                        <a class="dropdown-item" href="delegates.html">Delegates</a>
-                        <a class="dropdown-item" href="alumni.html">Alumni</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="sop.html">Statement of purpose</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="transport.html">Transport</a>
-                        <a class="dropdown-item" href="accommodation.html">Accommodation</a>
-                        <a class="dropdown-item" href="schedule.html">Schedule</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="spotlight.html">Spotlight</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="press.html">Press</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="munapp.html">MUNApp</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fas fa-list text-dark"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Committees</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="GA1.html">GA</a>
+                            <a class="dropdown-item" href="ENV.html">ENV</a>
+                            <a class="dropdown-item" href="ECOSOC.html">ECOSOC</a>
+                            <a class="dropdown-item" href="HRC.html">HRC</a>
+                            <a class="dropdown-item" href="SC.html">SC</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Conference</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="directors.html">Directors</a>
+                            <a class="dropdown-item" href="so.html">Student Officers</a>
+                            <a class="dropdown-item" href="delegates.html">Delegates</a>
+                            <a class="dropdown-item" href="alumni.html">Alumni</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="sop.html">Statement of purpose</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Logistics</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="schedule.html">Schedule</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="press.html">Press</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 </header>
 
     <section class="section-header text-center" id="section-header">
@@ -91,8 +77,7 @@
     <section>
         <div class="text-center container-fluid first">
             <div class="team">
-                <h1>Press</h1>
-                <a href="photos.html"><button type="button" class="btn btn-primary">Photos</button></a>
+                <h1><a href="photos.html"><button type="button" class="btn btn-primary">P h o t o s</button></a></h1>
                 
                 <br><br><br>
                 <h5>Click on the issue to download</h5>
