--- a/GA1.html
+++ b/GA1.html
@@ -87,7 +87,7 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">General assembly consists of all members states and engages in a variety of issues raised by the member states.
-						<br>The chairs for this council are TBD.<br>
+						<br>The chairs for this committee are Ray Fang and Joe Wang.<br>
 						<br>The topics for this committee are;<br>
                             <li>Facilitating the global effort to contain COVID-19</li>
                             <li>Addressing rampant plastic pollution in the oceans</li>
