--- a/SC.html
+++ b/SC.html
@@ -87,7 +87,7 @@
                     <hr>
                     <br>
                     <p class="text-dark lead">The security council seeks to promote world peace, engaging with the most critical issues facing the security of the world.
-						<br>The chairs for this council are TBD.<br>
+						<br>The chairs for this committee are Brian Lee and Henry Man.<br>
 						<br>The topics for this committee are;<br>
                             <li>Question of demilitarizing the Kashmir Valley </li>
                             <li>The situation in Nagorno-Karabakh </li>
