--- a/so.html
+++ b/so.html
@@ -77,37 +77,23 @@
     <section>
         <div class="text-center container-fluid first">
             <div class="team">
-                <h1> Student Officers </h1>
-                <p>Student Officers for DIMUN XI</p>
+                <h1>Student Officers for DIMUN XI</h1>
                 <hr>
 				<h7>
 					<strong>General Assembly 1 [GA1]</strong><br>
-					Charlie Yang<br>
-					Victoria Hong<br><br>
-					<strong>General Assembly 2 [GA2]</strong><br>
-					Jeehyun Song<br>
-					Eugene Shim<br><br>
+					Ray Fang<br>
+					Joe Wang<br><br>
 					<strong>Environment Commission [ENV]</strong><br>
 					Betty Hong<br>
-					Crystal Gong<br><br>
+					Zion Kang<br><br>
 					<strong>Economic and Social [ECOSOC]</strong><br>
-					Audrey Wong<br>
-					Sofija Gribovski<br><br>
+					Ray Fang<br>
+					Tom Cai<br><br>
 					<strong>Human Rights Council [HRC]</strong><br>
-					Charlotte Kim<br>
-					Seungyon Kim<br><br>
-					<strong>Special Conference [SPC]</strong><br>
-					Lily Lee<br>
-					Nicky Baek<br><br>
-					<strong>Disarmament Council [DIS]</strong><br>
-					Sharanya Trivedi<br>
-					Joshua Pan<br><br>
+					Lily Lee<br><br>
 					<strong>Security Council [SC]</strong><br>
-					Seongjun Choi<br>
-					Vince Tiu<br><br>
-					<strong>Advisory Panel [AP]</strong><br>
-					Joy Ryu<br>
-					Seoyeon Yu<br><br>
+					N/A<br>
+					N/A<br><br>
 					<br>
 				</h7>
             </div>
